server_3 starting actions

--- a/server_3/package.json
+++ b/server_3/package.json
@@ -1,13 +1,11 @@
 {
   "name": "server_3",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "author": "bookgvi",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
